Fix card background alignment
Background out by 2px as spotted by Raven Snow on Discord

--- a/css/card2.css
+++ b/css/card2.css
@@ -237,7 +237,7 @@
 	position: relative;
 	background:#c0c0c0;
 	margin:29px;
-	margin-top:7px;
+	margin-top:5px;
 	margin-bottom:0px;
 	min-height:350px;
 }
